--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -256,7 +256,8 @@ body {
 
 .login-section {
     font-family: 'Quicksand', sans-serif;
-    background-color: #163458 !important;
+    background-color: #34495e !important;
+    border-radius: 5px;
     border-bottom: none;
     color:white;
 }
@@ -284,8 +285,7 @@ body {
 .login-input {
     background-color: transparent;
     border:unset;
-    border-bottom: 1px solid white;
-    border-radius: 0px;
+    border: 1px solid white;
     color:white !important;
 }
 
@@ -294,7 +294,7 @@ body {
     background-color: transparent;
     outline:none;
     box-shadow:unset;
-    border-bottom-color: white;
+    border:1px solid #27ae60 !important;
 }
 
 .check-remember {
@@ -304,13 +304,12 @@ body {
 .btn-login {
     margin-top:30px;
     font-size: 10pt;
-    border-radius:25px;
+    border-radius:3px;
     padding-top: 10px;
     padding-bottom:10px;
-    background-color: #ff4757 !important;
-    border-color: #ff4757 !important;
-    box-shadow: 0px 8px 17px rgba(255, 71, 87, 0.7);
-    margin-bottom: 50px;
+    background-color: #27ae60 !important;
+    border-color: #27ae60 !important;
+    box-shadow: 0px 5px 17px rgb(46, 204, 113, 0.4);
 }
 
 /* color presentase  */
