--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -271,9 +271,10 @@ body {
 } */
 
 .auth-container .auth-header {
-    padding-top: 30px;
+    padding-top: 26px;
     text-align: center;
     border-bottom: none;
+    margin-bottom: -20px;
 }
 
 .auth-container .auth-title {
@@ -302,7 +303,7 @@ body {
 }
 
 .btn-login {
-    margin-top:30px;
+    margin-top:20px;
     font-size: 10pt;
     border-radius:3px;
     padding-top: 10px;
