--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 @import url('https://fonts.googleapis.com/css?family=Cormorant+SC:700');
 @import url('https://fonts.googleapis.com/css?family=Quicksand:700');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:700');
 /* END */
 body {
     font-family: 'Roboto', sans-serif;
