--- a/assets/css/alamraya-style.css
+++ b/assets/css/alamraya-style.css
@@ -343,3 +343,16 @@ aside.sidebar{
 	display: inline-block;
 }
 /*End Ari Style*/
+
+.btn.btn-danger{
+	color: #000;
+}
+.btn.btn-info:hover,
+.btn.btn-info:active,
+.btn.btn-primary:hover,
+.btn.btn-primary:active,
+.btn.btn-warning:hover,
+.btn.btn-warning:active
+{
+	color: #fff;
+}
