--- a/assets/css/loading.css
+++ b/assets/css/loading.css
@@ -131,3 +131,46 @@ body {
         opacity: 1;
     }
 }
+
+
+.loader {
+    position: absolute;
+    top: 68%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 4px;
+    width: 200px;
+    position: relative;
+    overflow: hidden;
+    background-color: #ddd;
+    opacity:0;
+    animation: showload 2s ease forwards 2.5s;
+  }
+  .loader:before{
+    display: block;
+    position: absolute;
+    content: "";
+    left: -200px;
+    width: 200px;
+    height: 4px;
+    background-color: #2980b9;
+    animation: loading 2s linear infinite;
+  }
+
+  @keyframes showload{
+      0%{
+          opacity: 0;
+      }
+      100%{
+          opacity: 1;
+      }
+  }
+  
+  @keyframes loading {
+      from {left: -200px; width: 30%;}
+      50% {width: 30%;}
+      70% {width: 70%;}
+      80% { left: 50%;}
+      95% {left: 120%;}
+      to {left: 100%;}
+  }
