--- a/assets/css/vendor.css
+++ b/assets/css/vendor.css
@@ -13401,6 +13401,9 @@ button.close {
   .modal-lg {
     max-width: 800px;
   }
+    .modal-xl {
+        max-width: 1000px;
+    }
 }
 
 .tooltip {
